파일 분할 완료
남은 일:  줄 삭제, 드랍 기능
줄 삭제는 여전히 감이 안잡히며 드랍 기능은 구현했으나 잘 모르는 부분이 있는지 버그가 나서 주석처리했습니다.

배운 것: class 의 static 변수는 main.h에 할당해야 하며 이러지 않고 그 헤더파일마다 선언하면 변수 재정의 링크 오류가 일어난다. 더블포인터로 선언된 객체는 멤버함수를 불러올 수 없고 더블포인터로 동적 할당을 할려하면 더블포인터는 nullptr이기 때문에 할당이 불가능하다. 따라서 할당은 포인터와 레퍼런스를 써서 할당하도록 하자. randomBlock 함수의 매개 변수를 보면 확인할 수 있다.

--- a/OOP_HW2/OOP_HW2/OOP_HW2.vcxproj
+++ b/OOP_HW2/OOP_HW2/OOP_HW2.vcxproj
@@ -115,9 +115,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Block.cpp" />
+    <ClCompile Include="Blocks.cpp" />
+    <ClCompile Include="Borland.cpp" />
+    <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Screen.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Block.h" />
+    <ClInclude Include="Blocks.h" />
+    <ClInclude Include="Borland.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Input.h" />
+    <ClInclude Include="main.h" />
+    <ClInclude Include="Screen.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
